<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/details_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/pikachu"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/heightView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/height"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/height"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/WeightView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/weight"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/weight"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/OrderView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="Order"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="Order"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ExpView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/base_experience"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/base_experience"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/PokemonDisplay"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignTop="@id/card_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-90dp"
            android:contentDescription="@string/pokemon_image"
            android:src="@drawable/ic_launcher_background" />

    </RelativeLayout>

    <TextView
        android:id="@+id/network_error_handling1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/picachu_will_be_back_soon"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="40sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>